--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^2.1.1",
+    "resend": "^3.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
